# poordub

./: .gitignore  Makefile  README.md  poordub.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: ci.yml
examples/: play.py  record.py
poordub/: __init__.py
