[project]
name = "poordub"
authors = [{ name = "dnknth" }]
description = "A minimalistic audio processing library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = ["ldap", "web-ui", "python3"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
dependencies = ["audioop-lts>=0.2.1 ; python_full_version >= '3.13'"]

[project.urls]
Repository = "https://github.com/dnknth/poordub"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "poordub.__version__" }
